cbits/skia_capi/sk_types.h

typedef enum {
    UNKNOWN_SK_COLORTYPE = 0,  //!< UNINITIALIZED
    ALPHA_8_SK_COLORTYPE,      //!< PIXEL WITH ALPHA IN 8-BIT BYTE
    RGB_565_SK_COLORTYPE,      //!< PIXEL WITH 5 BITS RED, 6 BITS GREEN, 5 BITS
                           //!< BLUE, IN 16-BIT WORD
    ARGB_4444_SK_COLORTYPE,  //!< PIXEL WITH 4 BITS FOR ALPHA, RED, GREEN, BLUE;
                             //!< IN 16-BIT WORD
    RGBA_8888_SK_COLORTYPE,  //!< PIXEL WITH 8 BITS FOR RED, GREEN, BLUE, ALPHA;
                             //!< IN 32-BIT WORD
    RGB_888X_SK_COLORTYPE,  //!< PIXEL WITH 8 BITS EACH FOR RED, GREEN, BLUE; IN
                            //!< 32-BIT WORD
    BGRA_8888_SK_COLORTYPE,  //!< PIXEL WITH 8 BITS FOR BLUE, GREEN, RED, ALPHA;
                             //!< IN 32-BIT WORD
    RGBA_1010102_SK_COLORTYPE,  //!< 10 BITS FOR RED, GREEN, BLUE; 2 BITS FOR
                                //!< ALPHA; IN 32-BIT WORD
    BGRA_1010102_SK_COLORTYPE,  //!< 10 BITS FOR BLUE, GREEN, RED; 2 BITS FOR
                                //!< ALPHA; IN 32-BIT WORD
    RGB_101010X_SK_COLORTYPE,   //!< PIXEL WITH 10 BITS EACH FOR RED, GREEN,
                               //!< BLUE; IN 32-BIT WORD
    BGR_101010X_SK_COLORTYPE,  //!< PIXEL WITH 10 BITS EACH FOR BLUE, GREEN,
                               //!< RED; IN 32-BIT WORD
    BGR_101010X_XR_SK_COLORTYPE,  //!< PIXEL WITH 10 BITS EACH FOR BLUE, GREEN,
                                  //!< RED; IN 32-BIT WORD, EXTENDED RANGE
    BGRA_10101010_XR_SK_COLORTYPE,  //!< PIXEL WITH 10 BITS EACH FOR BLUE,
                                    //!< GREEN, RED, ALPHA; IN 64-BIT WORD,
                                    //!< EXTENDED RANGE
    RGBA_10X6_SK_COLORTYPE,  //!< PIXEL WITH 10 USED BITS (MOST SIGNIFICANT)
                             //!< FOLLOWED BY 6 UNUSED
                             //   BITS FOR RED, GREEN, BLUE, ALPHA; IN 64-BIT
                             //   WORD
    GRAY_8_SK_COLORTYPE,     //!< PIXEL WITH GRAYSCALE LEVEL IN 8-BIT BYTE
    RGBA_F16_NORM_SK_COLORTYPE,  //!< PIXEL WITH HALF FLOATS IN [0,1] FOR RED,
                                 //!< GREEN, BLUE, ALPHA;
                                 //   IN 64-BIT WORD
    RGBA_F16_SK_COLORTYPE,  //!< PIXEL WITH HALF FLOATS FOR RED, GREEN, BLUE,
                            //!< ALPHA;
                            //   IN 64-BIT WORD
    RGB_F16F16F16X_SK_COLORTYPE,  //!< PIXEL WITH HALF FLOATS FOR RED, GREEN,
                                  //!< BLUE; IN 64-BIT WORD
    RGBA_F32_SK_COLORTYPE,        //!< PIXEL USING C FLOAT FOR RED, GREEN, BLUE,
                            //!< ALPHA; IN 128-BIT WORD

    // THE FOLLOWING 6 COLORTYPES ARE JUST FOR READING FROM - NOT FOR RENDERING
    // TO
    R8G8_UNORM_SK_COLORTYPE,  //!< PIXEL WITH A UINT8_T FOR RED AND GREEN

    A16_FLOAT_SK_COLORTYPE,     //!< PIXEL WITH A HALF FLOAT FOR ALPHA
    R16G16_FLOAT_SK_COLORTYPE,  //!< PIXEL WITH A HALF FLOAT FOR RED AND GREEN

    A16_UNORM_SK_COLORTYPE,  //!< PIXEL WITH A LITTLE ENDIAN UINT16_T FOR ALPHA
    R16G16_UNORM_SK_COLORTYPE,  //!< PIXEL WITH A LITTLE ENDIAN UINT16_T FOR RED
                                //!< AND GREEN
    R16G16B16A16_UNORM_SK_COLORTYPE,  //!< PIXEL WITH A LITTLE ENDIAN UINT16_T
                                      //!< FOR RED, GREEN, BLUE
                                      //   AND ALPHA

    SRGBA_8888_SK_COLORTYPE,
    R8_UNORM_SK_COLORTYPE,
} sk_colortype_t;
typedef enum {
    UNKNOWN_SK_ALPHATYPE,
    OPAQUE_SK_ALPHATYPE,
    PREMUL_SK_ALPHATYPE,
    UNPREMUL_SK_ALPHATYPE,
} sk_alphatype_t;
typedef struct {
    int32_t left;
    int32_t top;
    int32_t right;
    int32_t bottom;
} sk_irect_t;
typedef struct sk_colorspace_t sk_colorspace_t;
typedef struct {
  sk_colorspace_t* colorspace;
  int32_t width;
  int32_t height;
  sk_colortype_t colorType;
  sk_alphatype_t alphaType;
} sk_imageinfo_t;
typedef enum {
  KEEP_SK_CODEC_ANIMATION_DISPOSAL_METHOD = 1,
  RESTORE_BG_COLOR_SK_CODEC_ANIMATION_DISPOSAL_METHOD = 2,
  RESTORE_PREVIOUS_SK_CODEC_ANIMATION_DISPOSAL_METHOD = 3,
} sk_codecanimation_disposalmethod_t;
typedef enum {
  SRC_OVER_SK_CODEC_ANIMATION_BLEND = 0,
  SRC_SK_CODEC_ANIMATION_BLEND = 1,
} sk_codecanimation_blend_t;
typedef struct {
  int fRequiredFrame;
  int fDuration;
  bool fFullyReceived;
  sk_alphatype_t fAlphaType;
  bool fHasAlphaWithinBounds;
  sk_codecanimation_disposalmethod_t fDisposalMethod;
  sk_codecanimation_blend_t fBlend;
  sk_irect_t fFrameRect;
} sk_codec_frameinfo_t;
typedef struct sk_svgcanvas_t sk_svgcanvas_t;
typedef enum {
  TRIANGLES_SK_VERTICES_VERTEX_MODE,
  TRIANGLE_STRIP_SK_VERTICES_VERTEX_MODE,
  TRIANGLE_FAN_SK_VERTICES_VERTEX_MODE,
} sk_vertices_vertex_mode_t;
typedef struct sk_vertices_t sk_vertices_t;
typedef struct sk_colorspace_transfer_fn_t {
  float fG;
  float fA;
  float fB;
  float fC;
  float fD;
  float fE;
  float fF;
} sk_colorspace_transfer_fn_t;
typedef struct sk_colorspace_primaries_t {
  float fRX;
  float fRY;
  float fGX;
  float fGY;
  float fBX;
  float fBY;
  float fWX;
  float fWY;
} sk_colorspace_primaries_t;