src/Skia/Bindings/Types.hsc


@
typedef struct 
{
  sk_colorspace_t *colorspace;
  int32_t width;
  int32_t height;
  sk_colortype_t colorType;
  sk_alphatype_t alphaType;
} sk_imageinfo_t
@
-}
data Sk_imageinfo = Sk_imageinfo
  { colorspace :: Ptr (Sk_colorspace) -- ^ C field: @"sk_colorspace_t *colorspace"@
  , width :: Int32 -- ^ C field: @"int32_t width"@
  , height :: Int32 -- ^ C field: @"int32_t height"@
  , colorType :: Sk_colortype -- ^ C field: @"sk_colortype_t colorType"@
  , alphaType :: Sk_alphatype -- ^ C field: @"sk_alphatype_t alphaType"@
  }
instance Foreign.Storable.Offset.Offset "colorspace" Sk_imageinfo where
  rawOffset = (#offset sk_imageinfo_t, colorspace)
instance Foreign.Storable.Offset.Offset "width" Sk_imageinfo where
  rawOffset = (#offset sk_imageinfo_t, width)
instance Foreign.Storable.Offset.Offset "height" Sk_imageinfo where
  rawOffset = (#offset sk_imageinfo_t, height)
instance Foreign.Storable.Offset.Offset "colorType" Sk_imageinfo where
  rawOffset = (#offset sk_imageinfo_t, colorType)
instance Foreign.Storable.Offset.Offset "alphaType" Sk_imageinfo where
  rawOffset = (#offset sk_imageinfo_t, alphaType)
instance Foreign.Storable.Storable Sk_imageinfo where
  sizeOf _ = (#size sk_imageinfo_t)
  alignment _ = (#alignment sk_imageinfo_t)
  peek p' = do
    colorspace <- (#peek sk_imageinfo_t, colorspace) p'
    width <- (#peek sk_imageinfo_t, width) p'
    height <- (#peek sk_imageinfo_t, height) p'
    colorType <- (#peek sk_imageinfo_t, colorType) p'
    alphaType <- (#peek sk_imageinfo_t, alphaType) p'
    pure Sk_imageinfo{..}
  poke p' Sk_imageinfo{..} = do
    (#poke sk_imageinfo_t, colorspace) p' colorspace
    (#poke sk_imageinfo_t, width) p' width
    (#poke sk_imageinfo_t, height) p' height
    (#poke sk_imageinfo_t, colorType) p' colorType
    (#poke sk_imageinfo_t, alphaType) p' alphaType

{- | C enum: @"sk_codecanimation_disposalmethod_t"@

@
typedef enum 
{
  KEEP_SK_CODEC_ANIMATION_DISPOSAL_METHOD = 1,
  RESTORE_BG_COLOR_SK_CODEC_ANIMATION_DISPOSAL_METHOD = 2,
  RESTORE_PREVIOUS_SK_CODEC_ANIMATION_DISPOSAL_METHOD = 3
} sk_codecanimation_disposalmethod_t
@

-}
newtype Sk_codecanimation_disposalmethod = Sk_codecanimation_disposalmethod (#type sk_codecanimation_disposalmethod_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_codecanimation_disposalmethod_t"@ value (1/3): @"KEEP_SK_CODEC_ANIMATION_DISPOSAL_METHOD"@
pattern KEEP_SK_CODEC_ANIMATION_DISPOSAL_METHOD :: Sk_codecanimation_disposalmethod
pattern KEEP_SK_CODEC_ANIMATION_DISPOSAL_METHOD = (#const KEEP_SK_CODEC_ANIMATION_DISPOSAL_METHOD)

-- | C enum @"sk_codecanimation_disposalmethod_t"@ value (2/3): @"RESTORE_BG_COLOR_SK_CODEC_ANIMATION_DISPOSAL_METHOD"@
pattern RESTORE_BG_COLOR_SK_CODEC_ANIMATION_DISPOSAL_METHOD :: Sk_codecanimation_disposalmethod
pattern RESTORE_BG_COLOR_SK_CODEC_ANIMATION_DISPOSAL_METHOD = (#const RESTORE_BG_COLOR_SK_CODEC_ANIMATION_DISPOSAL_METHOD)

-- | C enum @"sk_codecanimation_disposalmethod_t"@ value (3/3): @"RESTORE_PREVIOUS_SK_CODEC_ANIMATION_DISPOSAL_METHOD"@
pattern RESTORE_PREVIOUS_SK_CODEC_ANIMATION_DISPOSAL_METHOD :: Sk_codecanimation_disposalmethod
pattern RESTORE_PREVIOUS_SK_CODEC_ANIMATION_DISPOSAL_METHOD = (#const RESTORE_PREVIOUS_SK_CODEC_ANIMATION_DISPOSAL_METHOD)

{- | C enum: @"sk_codecanimation_blend_t"@

@
typedef enum 
{
  SRC_OVER_SK_CODEC_ANIMATION_BLEND = 0,
  SRC_SK_CODEC_ANIMATION_BLEND = 1
} sk_codecanimation_blend_t
@

-}
newtype Sk_codecanimation_blend = Sk_codecanimation_blend (#type sk_codecanimation_blend_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_codecanimation_blend_t"@ value (1/2): @"SRC_OVER_SK_CODEC_ANIMATION_BLEND"@
pattern SRC_OVER_SK_CODEC_ANIMATION_BLEND :: Sk_codecanimation_blend
pattern SRC_OVER_SK_CODEC_ANIMATION_BLEND = (#const SRC_OVER_SK_CODEC_ANIMATION_BLEND)

-- | C enum @"sk_codecanimation_blend_t"@ value (2/2): @"SRC_SK_CODEC_ANIMATION_BLEND"@
pattern SRC_SK_CODEC_ANIMATION_BLEND :: Sk_codecanimation_blend
pattern SRC_SK_CODEC_ANIMATION_BLEND = (#const SRC_SK_CODEC_ANIMATION_BLEND)

{- | C struct: @"sk_codec_frameinfo_t"@

@
typedef struct 
{
  int fRequiredFrame;
  int fDuration;
  _Bool fFullyReceived;
  sk_alphatype_t fAlphaType;
  _Bool fHasAlphaWithinBounds;
  sk_codecanimation_disposalmethod_t fDisposalMethod;
  sk_codecanimation_blend_t fBlend;
  sk_irect_t fFrameRect;
} sk_codec_frameinfo_t
@
-}
data Sk_codec_frameinfo = Sk_codec_frameinfo
  { fRequiredFrame :: CInt -- ^ C field: @"int fRequiredFrame"@
  , fDuration :: CInt -- ^ C field: @"int fDuration"@
  , fFullyReceived :: CBool -- ^ C field: @"_Bool fFullyReceived"@
  , fAlphaType :: Sk_alphatype -- ^ C field: @"sk_alphatype_t fAlphaType"@
  , fHasAlphaWithinBounds :: CBool -- ^ C field: @"_Bool fHasAlphaWithinBounds"@
  , fDisposalMethod :: Sk_codecanimation_disposalmethod -- ^ C field: @"sk_codecanimation_disposalmethod_t fDisposalMethod"@
  , fBlend :: Sk_codecanimation_blend -- ^ C field: @"sk_codecanimation_blend_t fBlend"@
  , fFrameRect :: Sk_irect -- ^ C field: @"sk_irect_t fFrameRect"@
  }
instance Foreign.Storable.Offset.Offset "fRequiredFrame" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fRequiredFrame)
instance Foreign.Storable.Offset.Offset "fDuration" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fDuration)
instance Foreign.Storable.Offset.Offset "fFullyReceived" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fFullyReceived)
instance Foreign.Storable.Offset.Offset "fAlphaType" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fAlphaType)
instance Foreign.Storable.Offset.Offset "fHasAlphaWithinBounds" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fHasAlphaWithinBounds)
instance Foreign.Storable.Offset.Offset "fDisposalMethod" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fDisposalMethod)
instance Foreign.Storable.Offset.Offset "fBlend" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fBlend)
instance Foreign.Storable.Offset.Offset "fFrameRect" Sk_codec_frameinfo where
  rawOffset = (#offset sk_codec_frameinfo_t, fFrameRect)
instance Foreign.Storable.Storable Sk_codec_frameinfo where
  sizeOf _ = (#size sk_codec_frameinfo_t)
  alignment _ = (#alignment sk_codec_frameinfo_t)
  peek p' = do
    fRequiredFrame <- (#peek sk_codec_frameinfo_t, fRequiredFrame) p'
    fDuration <- (#peek sk_codec_frameinfo_t, fDuration) p'
    fFullyReceived <- (#peek sk_codec_frameinfo_t, fFullyReceived) p'
    fAlphaType <- (#peek sk_codec_frameinfo_t, fAlphaType) p'
    fHasAlphaWithinBounds <- (#peek sk_codec_frameinfo_t, fHasAlphaWithinBounds) p'
    fDisposalMethod <- (#peek sk_codec_frameinfo_t, fDisposalMethod) p'
    fBlend <- (#peek sk_codec_frameinfo_t, fBlend) p'
    fFrameRect <- (#peek sk_codec_frameinfo_t, fFrameRect) p'
    pure Sk_codec_frameinfo{..}
  poke p' Sk_codec_frameinfo{..} = do
    (#poke sk_codec_frameinfo_t, fRequiredFrame) p' fRequiredFrame
    (#poke sk_codec_frameinfo_t, fDuration) p' fDuration
    (#poke sk_codec_frameinfo_t, fFullyReceived) p' fFullyReceived
    (#poke sk_codec_frameinfo_t, fAlphaType) p' fAlphaType
    (#poke sk_codec_frameinfo_t, fHasAlphaWithinBounds) p' fHasAlphaWithinBounds
    (#poke sk_codec_frameinfo_t, fDisposalMethod) p' fDisposalMethod
    (#poke sk_codec_frameinfo_t, fBlend) p' fBlend
    (#poke sk_codec_frameinfo_t, fFrameRect) p' fFrameRect

{- | Opaque C struct: @"sk_svgcanvas_t"@
-}
data Sk_svgcanvas = Sk_svgcanvas

{- | C enum: @"sk_vertices_vertex_mode_t"@

@
typedef enum 
{
  TRIANGLES_SK_VERTICES_VERTEX_MODE,
  TRIANGLE_STRIP_SK_VERTICES_VERTEX_MODE,
  TRIANGLE_FAN_SK_VERTICES_VERTEX_MODE
} sk_vertices_vertex_mode_t
@

-}
newtype Sk_vertices_vertex_mode = Sk_vertices_vertex_mode (#type sk_vertices_vertex_mode_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_vertices_vertex_mode_t"@ value (1/3): @"TRIANGLES_SK_VERTICES_VERTEX_MODE"@
pattern TRIANGLES_SK_VERTICES_VERTEX_MODE :: Sk_vertices_vertex_mode
pattern TRIANGLES_SK_VERTICES_VERTEX_MODE = (#const TRIANGLES_SK_VERTICES_VERTEX_MODE)

-- | C enum @"sk_vertices_vertex_mode_t"@ value (2/3): @"TRIANGLE_STRIP_SK_VERTICES_VERTEX_MODE"@
pattern TRIANGLE_STRIP_SK_VERTICES_VERTEX_MODE :: Sk_vertices_vertex_mode
pattern TRIANGLE_STRIP_SK_VERTICES_VERTEX_MODE = (#const TRIANGLE_STRIP_SK_VERTICES_VERTEX_MODE)

-- | C enum @"sk_vertices_vertex_mode_t"@ value (3/3): @"TRIANGLE_FAN_SK_VERTICES_VERTEX_MODE"@
pattern TRIANGLE_FAN_SK_VERTICES_VERTEX_MODE :: Sk_vertices_vertex_mode
pattern TRIANGLE_FAN_SK_VERTICES_VERTEX_MODE = (#const TRIANGLE_FAN_SK_VERTICES_VERTEX_MODE)

{- | Opaque C struct: @"sk_vertices_t"@
-}
data Sk_vertices = Sk_vertices

{- | C struct: @"sk_colorspace_transfer_fn_t"@

@
typedef struct sk_colorspace_transfer_fn_t
{
  float fG;
  float fA;
  float fB;
  float fC;
  float fD;
  float fE;
  float fF;
} sk_colorspace_transfer_fn_t
@
-}
data Sk_colorspace_transfer_fn = Sk_colorspace_transfer_fn
  { fG :: CFloat -- ^ C field: @"float fG"@
  , fA :: CFloat -- ^ C field: @"float fA"@
  , fB :: CFloat -- ^ C field: @"float fB"@
  , fC :: CFloat -- ^ C field: @"float fC"@
  , fD :: CFloat -- ^ C field: @"float fD"@
  , fE :: CFloat -- ^ C field: @"float fE"@
  , fF :: CFloat -- ^ C field: @"float fF"@
  }
instance Foreign.Storable.Offset.Offset "fG" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fG)
instance Foreign.Storable.Offset.Offset "fA" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fA)
instance Foreign.Storable.Offset.Offset "fB" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fB)
instance Foreign.Storable.Offset.Offset "fC" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fC)
instance Foreign.Storable.Offset.Offset "fD" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fD)
instance Foreign.Storable.Offset.Offset "fE" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fE)
instance Foreign.Storable.Offset.Offset "fF" Sk_colorspace_transfer_fn where
  rawOffset = (#offset sk_colorspace_transfer_fn_t, fF)
instance Foreign.Storable.Storable Sk_colorspace_transfer_fn where
  sizeOf _ = (#size sk_colorspace_transfer_fn_t)
  alignment _ = (#alignment sk_colorspace_transfer_fn_t)
  peek p' = do
    fG <- (#peek sk_colorspace_transfer_fn_t, fG) p'
    fA <- (#peek sk_colorspace_transfer_fn_t, fA) p'
    fB <- (#peek sk_colorspace_transfer_fn_t, fB) p'
    fC <- (#peek sk_colorspace_transfer_fn_t, fC) p'
    fD <- (#peek sk_colorspace_transfer_fn_t, fD) p'
    fE <- (#peek sk_colorspace_transfer_fn_t, fE) p'
    fF <- (#peek sk_colorspace_transfer_fn_t, fF) p'
    pure Sk_colorspace_transfer_fn{..}
  poke p' Sk_colorspace_transfer_fn{..} = do
    (#poke sk_colorspace_transfer_fn_t, fG) p' fG
    (#poke sk_colorspace_transfer_fn_t, fA) p' fA
    (#poke sk_colorspace_transfer_fn_t, fB) p' fB
    (#poke sk_colorspace_transfer_fn_t, fC) p' fC
    (#poke sk_colorspace_transfer_fn_t, fD) p' fD
    (#poke sk_colorspace_transfer_fn_t, fE) p' fE
    (#poke sk_colorspace_transfer_fn_t, fF) p' fF

{- | C struct: @"sk_colorspace_primaries_t"@
